fixing scrollbar margin

--- a/styles/style.css
+++ b/styles/style.css
@@ -3,9 +3,13 @@
     src: url("../fonts/PermanentMarker-Regular.ttf");
 }
 
+html,
 body {
     margin: 0;
+    padding: 0;
+    width: 100vw;
     height: 100vh;
+    scroll-margin: 0;
     font-family: marker;
 }
 
